# IDTxl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  setup.py
demos/: demo_bivariate_mi.py  demo_bivariate_te.py  demo_core_estimators.py  demo_hd_estimator.py  demo_multivariate_mi.py  demo_multivariate_te.py  demo_partial_information_decomposition.py
docs/: conf.py
idtxl/: active_information_storage.py  bivariate_mi.py  bivariate_pid.py  bivariate_te.py  data.py  data_spiketime.py  embedding_optimization_ais_Rudelt.py  embedding_optimization_ais_rudelt.py  estimator.py  estimators_Rudelt.py  estimators_jidt.py  estimators_multivariate_pid.py  estimators_opencl.py  estimators_pid.py  hde_fast_embedding.pyx  hde_setup.py  hde_utils.py  idtxl_io.py  idtxl_utils.py  modwt.py  multivariate_mi.py  multivariate_pid.py  multivariate_spectral_te.py  multivariate_te.py  network_analysis.py  network_comparison.py  network_inference.py  partial_information_decomposition.py  pid_goettingen.py  postprocessing.py  results.py  setup_hde_fast_embedding.py  single_process_analysis.py  stats.py  synergy_tartu.py  visualise_graph.py
notebooks/: demo_bivariate_te.ipynb
test/: generate_test_data.py  performancetest_lorenz_2.py  systemtest_active_information_storage.py  systemtest_bivariate_pid.py  systemtest_checkpointing_kraskov.py  systemtest_lorenz_2.py  systemtest_lorenz_2_opencl.py  systemtest_multivariate_spectral_te.py  systemtest_multivariate_te.py  systemtest_multivariate_te_discrete.py  systemtest_mute.py  systemtest_neighbour_search_opencl.py  systemtest_network_comparison.py  systemtest_optimization_Rudelt.py  systemtest_optimize_rudelt_test_data.py  systemtest_partial_information_decomposition.py  systemtest_pid_sydney.py  systemtest_visualise_graph.py  test_active_information_storage.py  test_bivariate_mi.py  test_bivariate_pid.py  test_bivariate_te.py  test_checkpointing.py  test_data.py  test_data_spiketimes.py  test_estimator.py  test_estimators_Rudelt.py  test_estimators_pid.py  (+16 more)
(+47 files in other folders)
