[tool.poetry]
name = "idtxl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
h5py = "^3.4.0"
scipy = "^1.7.1"
networkx = "^2.6.2"
JPype1 = "^1.3.0"
ecos = "^2.0.7"
prettytable = "^2.2.0"
pyopencl = "^2021.2.6"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
