[tool.poetry]
name = "idtxl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.22.0"
matplotlib = ">=3.4.3"
h5py = ">=3.1.0"
scipy = ">=1.7.1"
networkx = ">=2.6.2"
JPype1 = ">=1.3.0"
ecos = ">=2.0.7"
prettytable = ">=2.2.0"
pyopencl = ">=2021.2.6"

[tool.poetry.dev-dependencies]
isort = ">=5.9.3"
pytest = ">=6.2.4"
pylint = ">=2.10.2"
pre-commit = ">=2.18.1"
black = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
