[tool.poetry]
name = "idtxl"
version = "1.5.0"
description = "Information Dynamics Toolkit xl"
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "idtxl"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.22.0"
matplotlib = ">=3.4.3"
h5py = ">=3.1.0"
scipy = ">=1.7.1"
networkx = ">=2.6.2"
JPype1 = ">=1.3.0"
ecos = ">=2.0.7"
prettytable = ">=2.2.0"
pyopencl = ">=2021.2.6"
cython = ">=0.29.32"
mpmath = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.7.0"
pytest-asyncio = ">=0.18.3"
pylint = ">=2.13.8"
black = ">=22.3.0"
pre-commit = ">=2.19.0"
isort = ">=5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
